# ccode

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: ccr_config.rs  ccr_manager.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs
