[package]
name = "ccode"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
sysinfo = "0.37"
   